--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "scripts": {
     "prestart": "npm start",
-    "start": "craco start",
-    "build": "craco build",
+    "start": "npm start",
+    "build": "npm build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +36,10 @@
       "not dead",
       "not op_mini all"
     ],
+    "engines": {
+      "node":"v14.16.0"
+
+    },
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
