--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^10.2.6",
     "cra-template": "^1.1.2",
+    "express": "^4.17.1",
+    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.2"
-    
+    "tailwindcss": "^2.2.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": " start",
@@ -38,8 +38,7 @@
       "not op_mini all"
     ],
     "engines": {
-      "node":"v14.16.0"
-
+      "node": "v14.16.0"
     },
     "development": [
       "last 1 chrome version",
