--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
+    "@tailwindcss/postcss7-compat": "^2.2.2",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^10.2.6",
     "cra-template": "^1.1.2",
     "express": "^4.17.1",
-    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "tailwindcss": "^2.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": " start",
+    "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -31,24 +29,16 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "engines": {
-      "node": "v14.16.0"
-    },
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "resolutions": {
+    "browserslist": "4.6.2",
+    "caniuse-lite": "1.0.30000974"
   },
+  "browserslist": [],
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.2"
+    "autoprefixer": "^9.8.6",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+  },
+  "peerDependencies": {
+    "postcss": "^7.0.36"
   }
 }
