--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-intl": "^5.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "tailwindcss": "^2.2.2"
   },
   "scripts": {
     "start": "craco start",
