--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
-    "@tailwindcss/postcss7-compat": "^2.2.2",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,8 +14,7 @@
     "react-intl": "^5.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2",
-    "tailwindcss": "^2.2.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
@@ -36,10 +34,11 @@
   },
   "browserslist": [],
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+    "autoprefixer": "^10.2.6",
+    "postcss": "8.3.5",
+    "tailwindcss": "^2.2.2"
   },
   "peerDependencies": {
-    "postcss": "^7.0.36"
+    "postcss": "^8.3.5"
   }
 }
