--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-horizontal-scrolling-menu": "^0.7.10",
     "react-intl": "^5.20.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
